--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  on_audio_query: ^2.9.0
+  permission_handler: ^11.1.0
+  just_audio: ^0.9.36
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/splashscreen.png
-    # - images/a_dot_ham.jpeg
+    - assets/images/Billie-Eilish-Happier-Than-Ever.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
