--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   just_audio: ^0.9.36
   on_audio_query: ^2.9.0
   permission_handler: ^11.1.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
