--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
   assets:
     - assets/images/splashscreen.png
     - assets/images/Billie-Eilish-Happier-Than-Ever.webp
+    - assets/images/leadingImage.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
