--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   on_audio_query: ^2.9.0
   permission_handler: ^11.1.0
   provider: ^6.1.1
+  google_fonts: ^6.1.0
+  marquee_text: ^2.5.0+1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
