--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.1.1
   google_fonts: ^6.1.0
   marquee_text: ^2.5.0+1
+  record: ^4.4.4
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
