--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   hive_flutter: ^1.1.0
   just_audio: ^0.9.36
   on_audio_query: ^2.9.0
+  just_audio_background: ^0.0.1-beta.5
   permission_handler: ^11.1.0
   provider: ^6.1.1
   google_fonts: ^6.1.0
   marquee_text: ^2.5.0+1
   record: ^4.4.4
   audioplayers: ^5.2.1
+  
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
