--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   marquee_text: ^2.5.0+1
   record: ^4.4.4
   audioplayers: ^5.2.1
+  share_plus: ^7.2.1
+  http: ^1.2.0
   
 
 dev_dependencies:
@@ -86,15 +88,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: fonts/Pacifico-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: ABeeZee
+      fonts:
+        - asset: fonts/ABeeZee-Italic.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
